# kernels

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  e2e-test-plan.md  example_usage.py  flake.nix  install.sh  onboard-script-plan.md  pyproject.toml  pytest.ini  update_python_depends.py
.claude/: settings.local.json
build2cmake/src/templates/: add_gpu_arch_metadata.py  build-variants.cmake  get_gpu_lang.py  kernel.cmake  preamble.cmake  pyproject.toml  setup.py  torch-binding.cmake  torch-extension.cmake  utils.cmake  windows.cmake
build2cmake/src/templates/cpu/: kernel.cmake  preamble.cmake
build2cmake/src/templates/cuda/: dep-cutlass.cmake  kernel.cmake  preamble.cmake  torch-binding.cmake
build2cmake/src/templates/metal/: compile-metal.cmake  kernel.cmake  preamble.cmake
build2cmake/src/templates/noarch/: pyproject.toml  setup.py
build2cmake/src/templates/tvm_ffi/: binding.cmake  build-variants.cmake  preamble.cmake  pyproject.toml  setup.py  tvm-ffi-extension.cmake
build2cmake/src/templates/xpu/: dep-cutlass-sycl.cmake  kernel.cmake  preamble.cmake  torch-extension.cmake
builder/examples/relu-tvm-ffi/: CMakeLists.txt  build.toml  util.hh
builder/examples/relu-tvm-ffi/relu_cpu/: relu_cpu.cpp
builder/examples/relu-tvm-ffi/relu_cuda/: relu.cu
builder/examples/relu-tvm-ffi/tests/: test_relu.py
builder/examples/relu-tvm-ffi/tvm-ffi-ext/: tvm_ffi_binding.cpp
builder/examples/relu-tvm-ffi/tvm-ffi-ext/relu_tvm_ffi/: __init__.py
docs/: docker.md  (+3 more)
kernel-abi-check/: Cargo.toml
kernel-abi-check/bindings/python/: Cargo.toml
kernel-abi-check/kernel-abi-check/: Cargo.toml
kernel-abi-check/kernel-abi-check/src/: main.rs
kernel-abi-check/kernel-abi-check/src/torch_stable_abi/: mod.rs
kernel-abi-check/src/: lib.rs
kernel-builder/: Cargo.toml  build.rs
kernel-builder/scripts/: generate_cli_docs.sh  install_skills.py
kernel-builder/skills/cpu-kernels/: SKILL.md  manifest.txt
kernel-builder/skills/cpu-kernels/references/: brgemm_patterns.yaml  build_system.yaml  correctness.yaml  dtype_optimizations.yaml  huggingface-kernels-integration.md  implementation_reference.md  memory_patterns.yaml  optimization_levels.yaml  optimization_strategies.md  quantized_gemm_patterns.yaml  runtime_dispatch.yaml  simd_optimization_patterns.yaml  threading_patterns.yaml  workflow_details.md
kernel-builder/skills/cpu-kernels/scripts/: analyze_op.py  benchmark_cpu.py  config.py  config.yaml  cpu_profiler.py  trial_manager.py  validate_cpu_kernel.py
kernel-builder/skills/cuda-kernels/: SKILL.md
kernel-builder/skills/cuda-kernels/references/: a100-optimization-guide.md  diffusers-h100.md  diffusers-integration.md  h100-optimization-guide.md  huggingface-kernels-integration.md  kernel-templates.md  t4-optimization-guide.md  transformers-integration.md  troubleshooting.md
kernel-builder/skills/cuda-kernels/scripts/: benchmark_example.py  huggingface_kernels_example.py  ltx_kernel_injection_example.py  transformers_injection_example.py
kernel-builder/skills/triton-kernels/: CHANGELOG.md  SKILL.md  manifest.txt
kernel-builder/skills/triton-kernels/examples/: fused_softmax.py  skill_test_layernorm.py
kernel-builder/skills/triton-kernels/references/: autotune-guide.md  benchmarking-guide.md  kernel-patterns.md
kernel-builder/skills/triton-kernels/scripts/: benchmark_template.py  correctness_template.py
kernel-builder/skills/xpu-kernels/: SKILL.md
kernel-builder/skills/xpu-kernels/references/: xpu_optimizations.yaml
kernel-builder/skills/xpu-kernels/scripts/: config.py  trial_manager.py  xpu_profiler.py
kernel-builder/src/: build.rs  card.rs  check_abi.rs  compat.rs  completions.rs  develop.rs  hash.rs  hf.rs  init.rs  kernel.rs  list_variants.rs  main.rs  nix.rs  sign.rs  skills.rs  upload.rs  util.rs  validate_builds.rs
kernel-builder/src/config/: compat.rs  deps.rs  mod.rs  name.rs  v1.rs  v2.rs  v3.rs
kernel-builder/src/init/templates/: .gitattributes  CARD.md  build.toml  example.py
kernel-builder/src/init/templates/benchmarks/: benchmark.py
kernel-builder/src/init/templates/kernel_cpu/: kernel_cpu.cpp
kernel-builder/src/init/templates/kernel_cuda/: kernel.cu
kernel-builder/src/init/templates/kernel_metal/: kernel.metal  kernel.mm
kernel-builder/src/init/templates/kernel_xpu/: kernel.cpp
kernel-builder/src/init/templates/tests/: test_kernel.py
kernel-builder/src/pyproject/: card.rs  common.rs  compat.rs  deps.rs  fileset.rs  kernel.rs  metadata.rs  mod.rs  ops_identifier.rs
kernel-builder/src/pyproject/templates/: kernel.cmake  utils.cmake
kernel-builder/src/pyproject/torch/: deps.rs  mod.rs  noarch.rs
kernel-builder/src/pyproject/tvm_ffi/: mod.rs
kernel-builder/src/templates/: torch-extension.cmake  utils.cmake
kernel-builder/src/templates/tvm_ffi/: preamble.cmake  setup.py
kernel-builder/src/torch/: common.rs  deps.rs  kernel.rs  mod.rs  noarch.rs
kernel-builder/src/tvm_ffi/: mod.rs
kernel-builder/tests/: init_e2e.rs
kernels-data/: Cargo.toml
kernels-data/bindings/python/: Cargo.toml  MANIFEST.in  kernels_data.pyi  pyproject.toml  stubtest-allowlist.txt
kernels-data/bindings/python/src/: lib.rs
kernels-data/bindings/python/tests/: test_digest.py  test_kernels_data.py
kernels-data/src/: digest.rs  lib.rs  metadata.rs  python_dependencies.json  version.rs
kernels-data/src/config/: compat.rs  deps.rs  git_url.rs  mod.rs  name.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
kernels-rs/: Cargo.toml
kernels-rs/src/: backend.rs  candle.rs  error.rs  lib.rs  runtime.rs  tvm_ffi.rs  variant.rs
kernels-templates/: Cargo.toml
kernels-templates/src/: common.rs  kernel.rs  lib.rs
kernels-templates/src/templates/kernel-component/: cuda.cmake  hip.cmake  metal.cmake  xpu.cmake
kernels-templates/src/templates/torch/: pyproject.toml  setup.py
kernels-templates/src/templates/tvm_ffi/: _ops.py.in  preamble.cmake  setup.py
kernels-templates/src/templates/xpu/: dep-sycl-tla.cmake
kernels-templates/src/torch/: mod.rs  noarch.rs
kernels-templates/src/tvm_ffi/: mod.rs
(+794 files in other folders)
