[tool.poetry]
name = "kernels"
version = "0.1.0"
description = ""
authors = ["OlivierDehaene <olivier@huggingface.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
huggingface-hub = "^0.26.3"
packaging = "^24.2"
tomli = { version = "^2.0.1", python = "<3.11" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
