[package]
name = "hf-kernel-builder"
version = "0.13.0-dev0"
edition = "2021"
description = "Build Hugging Face Hub kernels"
homepage = "https://github.com/huggingface/kernels"
license = "Apache-2.0"
documentation = "https://docs.rs/hf-kernel-builder"
repository = "https://github.com/huggingface/kernels"

[dependencies]
base32 = "0.5"
kernels-data = { path = "../kernels-data" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
eyre = "0.6.12"
git2 = "0.20"
huggingface-hub = { git = "https://github.com/huggingface/huggingface_hub_rust.git", rev = "6084c0f911026b4fec2961742c611520d7eb3d27", package = "huggingface-hub", features = ["blocking", "xet"] }
itertools = "0.13"
minijinja = "2.5"
minijinja-embed = "2.5"
rand = "0.8"
regex = "1"
rustpython-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-value = "0.7"
thiserror = "1"
toml = "0.8"
url = { version = "2", features = ["serde"] }
ureq = "3"
dirs = "6"
walkdir = "2"

[build-dependencies]
minijinja-embed = "2.5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "kernel-builder"
path = "src/main.rs"
