[package]
name = "hf-kernel-builder"
version = "0.14.0-dev1"
edition = "2021"
description = "Build Hugging Face Hub kernels"
homepage = "https://github.com/huggingface/kernels"
license = "Apache-2.0"
documentation = "https://docs.rs/hf-kernel-builder"
repository = "https://github.com/huggingface/kernels"

[dependencies]
base32 = "0.5"
kernels-data = { path = "../kernels-data" }
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1.5"
clap_complete = "4"
eyre = "0.6.12"
git2 = "0.20"
hf-hub = { version = "1.0.0-rc.0", features = ["blocking"] }
itertools = "0.13"
minijinja = "2.5"
minijinja-embed = "2.5"
rand = "0.8"
regex = "1"
rustpython-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-value = "0.7"
thiserror = "1"
toml = "0.8"
url = { version = "2", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.13", features = ["blocking"] }
walkdir = "2"

[build-dependencies]
minijinja-embed = "2.5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "kernel-builder"
path = "src/main.rs"
