[package]
name = "kernels-data"
version = "0.14.1"
edition = "2024"
description = "Kernels data structures"
homepage = "https://github.com/huggingface/kernels"
license = "Apache-2.0"
repository = "https://github.com/huggingface/kernels"

[dependencies]
eyre = "0.6.12"
itertools = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-value = "0.7"
thiserror = "1"
url = { version = "2", features = ["serde"] }
