[package]
name = "kernels"
version = "0.1.0"
edition = "2024"
description = "Load and call Hugging Face Hub kernels in Rust"
homepage = "https://github.com/huggingface/kernels"
license = "Apache-2.0"
repository = "https://github.com/huggingface/kernels"

[features]
default = []
candle = ["dep:candle-core"]
candle-cuda = ["candle", "candle-core/cuda", "dep:cudarc"]

[dependencies]
candle-core = { version = "0.9.2", optional = true }
cudarc = { version = "0.19.0", optional = true }
huggingface-hub = { git = "https://github.com/huggingface/huggingface_hub_rust.git", rev = "8cbc662035e04d4be8e829316272893e980f5926", package = "huggingface-hub", features = ["blocking"] }
libc = "0.2"
libloading = "0.8"
thiserror = "1"
walkdir = "2"
