[package]
name = "kernels-templates"
version = "0.15.0-dev0"
edition = "2021"
description = "Create Hugging Face Hub kernel build files"
homepage = "https://github.com/huggingface/kernels"
license = "Apache-2.0"
documentation = "https://docs.rs/kernels-templates"
repository = "https://github.com/huggingface/kernels"

[dependencies]
base32 = "0.5"
kernels-data = { path = "../kernels-data", version = "0.15.0-dev0" }
clap = { version = "4", features = ["derive"] }
eyre = "0.6.12"
git2 = "0.20"
itertools = "0.13"
minijinja = "2.5"
minijinja-embed = "2.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[build-dependencies]
minijinja-embed = "2.5"

[dev-dependencies]
tempfile = "3"
