[package]
name = "kernels-data-python"
version = "0.14.0"
edition = "2024"
description = "Kernels data structures (Python bindings)"
homepage = "https://github.com/huggingface/kernels"
license = "Apache-2.0"
repository = "https://github.com/huggingface/kernels"

[lib]
name = "kernels_data"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["abi3", "abi3-py38"] }

[dependencies.kernels-data]
path = "../.."
version = "0.14.0"
