[project]
name = "kernels-data"
requires-python = '>=3.8'
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = [
  'description',
  'readme',
  'version',
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.maturin]
module-name = "kernels_data"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
