[project]
name = "{{ name }}"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
  "torch>=2.8",
  {{python_dependencies}}
]

[project.optional-dependencies]
{% for backend_name, deps in backend_dependencies %}
{{backend_name}} = [
  {% for dep in deps %}
  {{dep}},
  {% endfor %}
]
{% endfor %}

[tool.setuptools]
package-dir = { "" = "torch-ext" }

[tool.setuptools.packages.find]
where = ["torch-ext"]
include = ["{{name}}*"]

{% if data_globs %}
[tool.setuptools.package-data]
{{ name }} = [ {{ data_globs }} ]
{% endif %}

[tool.pytest.ini_options]
markers = [
  "kernels_ci: mark a test as a kernel CI test"
]
